# P4Web

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  HomeLeft.cc  HomeLeft.h  HomeRight.cc  HomeRight.h  MainUI.cc  Makefile  MyApplication.cc  MyApplication.h  README.md  WP4  debug  gdbdebug  main  main.cc  release  run  strings.xml  wp4.sublime-project  wp4.sublime-workspace  wt_config.xml.example
P4source/: color.h  custom.h  file_tab.cc  file_tab.h  file_vf.h  math_p4.cc  math_p4.h  math_polynom.cc  math_polynom.h  table.h
cmake/macros/: ConfigureBoost.cmake
css/: main.css
resources/: main.css  strings.xml  style.css  templates.xml
resources/css/: main.css  style.css
resources/xml/: mail_strings.xml  strings.xml  strings.xml.in  templates.xml
src/: AuthWidget.cc  AuthWidget.h  CMakeLists.txt  HomeLeft.cc  HomeLeft.h  HomeRight.cc  HomeRight.h  MainUI.cc  MainUI.h  MyApplication.cc  MyApplication.h  MyAuthWidget.cc  MyAuthWidget.h  MyLogger.cc  MyLogger.h  PlotRegion.cc  PlotRegion.h  RegistrationView.cc  RegistrationView.h  ScriptHandler.cc  ScriptHandler.h  Session.cc  Session.h  User.cc  User.h  UserDetailsModel.cc  UserDetailsModel.h  WSphere.cc  WSphere.h  color.cc  color.h  custom.h  deleteObjectPointer.h  delete_pointer.h  file_tab.cc  file_tab.h  main.cc  math_changedir.cc  math_charts.cc  math_charts.h  (+22 more)
src/P4src/: color.h  custom.h  file_tab.cpp  file_tab.h  math_charts.cpp  math_numerics.cpp  math_numerics.h  math_p4.h  math_polynom.cpp  math_polynom.h  math_separatrice.cpp  math_separatrice.h  plot_points.cpp  plot_tools.h  win_sphere.cpp
xml/: mail_strings.xml  strings.xml  templates.xml
